<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_set_data_general"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_view_margin"
    android:animateLayoutChanges="true"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/item_content_padding_top"
        android:paddingBottom="@dimen/item_content_padding_button">

        <TextView
            android:id="@+id/tv_general_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center"
            android:text="@string/general_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="17sp"
            android:textStyle="bold" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_set_data_general"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_general_locomotive_series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:gravity="center"
                android:text="@string/general_locomotive_series"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_general_locomotive_series"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_general_locomotive_series" />

            <EditText
                android:id="@+id/et_general_locomotive_series"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/ic_background_rectangle"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text"
                android:maxLength="9"
                android:padding="4dp"
                android:textColor="@color/colorInputDataText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_general_locomotive_series"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_train_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/general_train_number"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_general_train_number"
                app:layout_constraintStart_toStartOf="@+id/tv_general_locomotive_series"
                app:layout_constraintTop_toTopOf="@+id/et_general_train_number" />

            <EditText
                android:id="@+id/et_general_train_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_background_rectangle"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:maxLength="6"
                android:padding="4dp"
                android:textColor="@color/colorInputDataText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/et_general_locomotive_series"
                app:layout_constraintStart_toEndOf="@+id/tv_train_number"
                app:layout_constraintTop_toBottomOf="@+id/et_general_locomotive_series" />

            <TextView
                android:id="@+id/tv_general_wagon_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/general_tail_wagon_number"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_general_tail_wagon_number"
                app:layout_constraintStart_toStartOf="@+id/tv_train_number"
                app:layout_constraintTop_toTopOf="@+id/et_general_tail_wagon_number" />

            <EditText
                android:id="@+id/et_general_tail_wagon_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_background_rectangle"
                android:ems="10"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:maxLength="10"
                android:padding="4dp"
                android:textColor="@color/colorInputDataText"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/et_general_train_number"
                app:layout_constraintStart_toEndOf="@+id/tv_general_wagon_number"
                app:layout_constraintTop_toBottomOf="@+id/et_general_train_number" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>