<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_set_data_params"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_view_margin"
    android:clickable="true"
    android:focusable="true"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/item_content_padding_top"
        android:paddingBottom="@dimen/item_content_padding_button">

        <TextView
            android:id="@+id/tv_params_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/params_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="17sp"
            android:textStyle="bold" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_set_data_params"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_params_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/params_weight"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_params_weight"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_params_weight" />

            <EditText
                android:id="@+id/et_params_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_background_rectangle"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:padding="4dp"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:imeOptions="flagNoExtractUi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_params_weight"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_params_total_axes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/params_total_axes"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_params_total_axes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_params_total_axes" />

            <EditText
                android:id="@+id/et_params_total_axes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_background_rectangle"
                android:ems="10"
                android:gravity="center"
                android:inputType="text"
                android:padding="4dp"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:imeOptions="flagNoExtractUi"
                app:layout_constraintEnd_toEndOf="@+id/et_params_weight"
                app:layout_constraintStart_toEndOf="@+id/tv_params_total_axes"
                app:layout_constraintTop_toBottomOf="@+id/et_params_weight" />

            <TextView
                android:id="@+id/tv_params_pressing_pads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/params_pressing_pads"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_params_pressing_pads"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_params_pressing_pads" />

            <EditText
                android:id="@+id/et_params_pressing_pads"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_background_rectangle"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:padding="4dp"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:imeOptions="flagNoExtractUi"
                app:layout_constraintEnd_toEndOf="@+id/et_params_total_axes"
                app:layout_constraintStart_toEndOf="@+id/tv_params_pressing_pads"
                app:layout_constraintTop_toBottomOf="@+id/et_params_total_axes" />

           <!-- <TextView
                android:id="@+id/tv_general_wagon_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="Tail wagon No.:"
                android:textColor="?android:textColorPrimary"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/et_general_wagon_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/et_general_wagon_number" />

            <EditText
                android:id="@+id/et_general_wagon_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_background_rectangle"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:padding="4dp"
                android:textColor="?android:textColorPrimary"
                android:textSize="18sp"
                android:imeOptions="flagNoExtractUi"
                app:layout_constraintEnd_toEndOf="@+id/et_params_pressing_pads"
                app:layout_constraintStart_toEndOf="@+id/tv_general_wagon_number"
                app:layout_constraintTop_toBottomOf="@+id/et_params_pressing_pads" />-->

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>